--- a/svm_.ipynb
+++ b/svm_.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMHu8HQ4U/zNArtZuluU84o",
+      "authorship_tag": "ABX9TyNkEWBaDIDxr9AJiJa5t0eq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -80,7 +78,7 @@
         "\n",
         "df = pd.read_csv('/content/mushroom.csv')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +105,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +569,7 @@
         "display(df.describe())\n",
         "display(df.describe(include='object'))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1800,7 +1798,7 @@
         "    plt.ylabel(col)\n",
         "    plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2359,7 +2357,7 @@
         "plt.title(\"Correlation Matrix of Numerical Features\")\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2443,7 +2441,7 @@
         "df_encoded = pd.get_dummies(df, columns=categorical_cols, drop_first=True)\n",
         "display(df_encoded.head())"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2918,7 +2916,7 @@
         "print(\"Shape of y_train:\", y_train.shape)\n",
         "print(\"Shape of y_test:\", y_test.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2997,7 +2995,7 @@
         "    plt.ylabel('Count')\n",
         "    plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3117,7 +3115,7 @@
         "plt.xticks([0, 1], ['Edible', 'Poisonous'])\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3207,7 +3205,7 @@
         "# Instantiate the SVM classifier\n",
         "svm_model = SVC()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3246,7 +3244,7 @@
       "source": [
         "svm_model.fit(X_train, y_train)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3728,7 +3726,7 @@
         "print(f\"Recall: {recall:.4f}\")\n",
         "print(f\"F1-score: {f1:.4f}\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3825,7 +3823,7 @@
         "plt.ylabel('Cap Diameter')\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3945,7 +3943,7 @@
         "# Define the parameter grid\n",
         "param_grid = {\n",
         "    'C': [0.1, 1, 10, 100],\n",
-        "    'kernel': ['linear', 'rbf']\n",
+        "    'kernel': ['linear', 'poly', 'rbf', 'sigmoid']\n",
         "}\n",
         "\n",
         "# Instantiate GridSearchCV\n",
@@ -3960,6 +3958,54 @@
         "\n",
         "# Store the best model\n",
         "best_svm_model = grid_search.best_estimator_"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2dda87e0"
+      },
+      "source": [
+        "## Evaluate the best model on the test data\n",
+        "\n",
+        "### Subtask:\n",
+        "Evaluate the performance of the best SVM model on the test data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7ea0de46"
+      },
+      "source": [
+        "**Reasoning**:\n",
+        "Use the best model found during grid search to make predictions on the test set and calculate evaluation metrics."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6800d72a"
+      },
+      "source": [
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+        "\n",
+        "# Make predictions on the test data using the best model\n",
+        "y_pred_best = best_svm_model.predict(X_test)\n",
+        "\n",
+        "# Calculate evaluation metrics\n",
+        "accuracy_best = accuracy_score(y_test, y_pred_best)\n",
+        "precision_best = precision_score(y_test, y_pred_best)\n",
+        "recall_best = recall_score(y_test, y_pred_best)\n",
+        "f1_best = f1_score(y_test, y_pred_best)\n",
+        "\n",
+        "# Print the evaluation metrics for the best model\n",
+        "print(f\"Best Model Accuracy: {accuracy_best:.4f}\")\n",
+        "print(f\"Best Model Precision: {precision_best:.4f}\")\n",
+        "print(f\"Best Model Recall: {recall_best:.4f}\")\n",
+        "print(f\"Best Model F1-score: {f1_best:.4f}\")"
       ],
       "execution_count": null,
       "outputs": []
